# nihilsweeper

./: Cargo.toml  rustfmt.toml
.github/: copilot-instructions.md
.github/workflows/: build.yml  release.yml
assets/skin/wom-light/: skin.toml
src/: base.rs  config.rs  error.rs  main.rs  single_instance.rs  ui.rs  utils.rs
src/base/: board.rs  encode_decode.rs  mod.rs  vec2d.rs
src/engine/: solver.rs
src/engine/analysis/: brute_force.rs  guessing.rs  half_chance.rs  mod.rs  probability.rs  trivial.rs
src/engine/solver/: brute_force.rs  error.rs  guessing.rs  half_chance.rs  probability.rs  trivial.rs
src/ui/: analyzer.rs  app.rs  board_area.rs  board_frame.rs  editor.rs  game.rs  main_window.rs  mod.rs  modal.rs  overlay.rs  player.rs  skin.rs
src/ui/modal/: error.rs  export.rs  import.rs
src/ui/overlay/: solver_overlay.rs
src/ui/player/: game.rs
