[package]
name = "nihilsweeper"
version = "0.1.3"
edition = "2024"

[dependencies]
env_logger = "0.11"
iced = { version = "0.14", features = ["canvas", "image", "tokio"] }
image = "0.25"
itertools = "0.14"
log = { version = "0.4", features = ["std", "serde", "release_max_level_info"] }
rand = "0.9"
resvg = "0.45"
serde = { version = "1.0.228", features = ["derive"] }
tiny-skia = "0.11"
tokio = { version = "1.49" }
toml = "0.9"
usvg = "0.45"
