[package]
name = "nihilsweeper"
version = "0.1.4"
edition = "2024"

[dependencies]
base64 = "0.22.1"
env_logger = "0.11"
iced = { version = "0.14", features = ["canvas", "image", "tokio"] }
image = "0.25"
log = { version = "0.4", features = ["std", "serde", "release_max_level_info"] }
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9"
resvg = "0.46"
serde = { version = "1.0.228", features = ["derive"] }
smallvec = { version = "1.15.1", features = ["union"] }
tiny-skia = "0.11"
tokio = { version = "1.49", features = ["sync"] }
toml = "0.9"
url = "2.5"
usvg = "0.46"
