[package]
name = "nihilsweeper"
version = "0.1.5"
edition = "2024"

[dependencies]
base64 = "0.22"
dirs = "6.0"
env_logger = "0.11"
iced = { version = "0.14", features = ["canvas", "image", "tokio"] }
image = "0.25"
log = { version = "0.4", features = ["std", "serde", "release_max_level_info"] }
pastey = "0.2"
phf = { version = "0.13", features = ["macros"] }
rand = "0.9"
resvg = "0.46"
serde = { version = "1.0", features = ["derive"] }
smallvec = { version = "1.15", features = ["union"] }
tokio = { version = "1.49", features = ["sync"] }
toml = "0.9"
url = "2.5"
usvg = "0.46"
single-instance = "0.3"
interprocess = "2"
